tests/ui/lint/snapshots/allow_unused_function_scoped_to_annotated_declaration.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused function
   ╭─[test.lis:5:4]
 4 │ 
 5 │ fn warned() {}
   ·    ───┬──
   ·       ╰── never called
 6 │ 
   ╰────
  help: Call or remove this function · code: [lint.unused_function]
