tests/ui/lint/snapshots/allow_unused_result_does_not_suppress_option.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ `Option` is silently discarded
   ╭─[test.lis:8:3]
 7 │ fn main() {
 8 │   get_option();
   ·   ──────┬─────
   ·         ╰── absence will go unnoticed
 9 │   ()
   ╰────
  help: Handle this `Option` with `?` or `match`, or explicitly discard it with `let _ = ...` · code: [lint.unused_option]
