tests/ui/lint/snapshots/allow_unused_result_scoped_to_annotated_function.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ `Result` is silently discarded
    ╭─[test.lis:13:3]
 12 │   safe_call();
 13 │   unsafe_call();
    ·   ──────┬──────
    ·         ╰── failure will go unnoticed
 14 │   ()
    ╰────
  help: Handle this `Result` with `?` or `match`, or explicitly discard it with `let _ = ...` · code: [lint.unused_result]
