tests/ui/lint/snapshots/almost_swapped.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Variables are not swapped
   ╭─[test.lis:5:3]
 4 │       let mut b = 2
 5 │ ╭─▶   a = b
 6 │ ├─▶   b = a
   · ╰──── does not swap values
 7 │       let _ = a + b
   ╰────
  help: `a = b` overwrites `a`, so `b = a` writes `b`'s own value back and the original `a` is lost. Save one value in a temporary variable first · code: [lint.almost_swapped]
