tests/ui/lint/snapshots/almost_swapped_in_try_block.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Variables are not swapped
    ╭─[test.lis:10:5]
  9 │         let mut b = risky()?
 10 │ ╭─▶     a = b
 11 │ ├─▶     b = a
    · ╰──── does not swap values
 12 │         a + b
    ╰────
  help: `a = b` overwrites `a`, so `b = a` writes `b`'s own value back and the original `a` is lost. Save one value in a temporary variable first · code: [lint.almost_swapped]
